test/conformance/chainsaw/mutating-policies/exclude-images/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: container01
        image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-bad-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: container01
        image: ubuntu:latest
