test/conformance/chainsaw/mutating-policies/exclude-images/patched-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy
  labels:
    foo: bar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-bad-deploy
