test/conformance/chainsaw/mutating-policies/exclude-images/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exclude-images
spec:
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: exclude-images
  - name: create deployments
    try:
    - apply:
        file: deployments.yaml
  - name: check patches
    try:
    - assert:
        file: patched-deployments.yaml
